--- a/index.html
+++ b/index.html
@@ -13,20 +13,6 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 	https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -71,14 +57,14 @@
 					<div class="fh5co-intro">
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 text-center">
-								<h1 class="fh5co-intro-lead animate-1 to-animate">Verge</h1>
-								<h2 class="fh5co-intro-sub animate-2 to-animate">Hi! I&acute;m John Doe, a Senior Front-End Developer currently working at <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a></h2>
+								<h1 class="fh5co-intro-lead animate-1 to-animate">Partyrazzi Events</h1>
+								<h2 class="fh5co-intro-sub animate-2 to-animate">Bringing the glitz and glamour to your party, making everyone a STAR! Picture your event with us!</h2>
 								<p class="fh5co-social text-center" id="fh5co-intro-social">
-									<a href="#" class="to-animate"><i class="icon-facebook-with-circle"></i></a>
-									<a href="#" class="to-animate"><i class="icon-twitter-with-circle"></i></a>
+									<a href="https://www.facebook.com/pg/PartyrazziEvents/about/?ref=page_internal" class="to-animate"><i class="icon-facebook-with-circle"></i></a>
+									<!-- <a href="#" class="to-animate"><i class="icon-twitter-with-circle"></i></a>
 									<a href="#" class="to-animate"><i class="icon-dribbble-with-circle"></i></a>
-									<a href="#" class="to-animate"><i class="icon-google-with-circle"></i></a>
-									<a href="#" class="to-animate"><i class="icon-instagram-with-circle"></i></a>
+									<a href="#" class="to-animate"><i class="icon-google-with-circle"></i></a> -->
+									<a href="https://www.instagram.com/partyrazzipb/" class="to-animate"><i class="icon-instagram-with-circle"></i></a>
 								</p>
 							</div>
 						</div>
@@ -91,18 +77,18 @@
 			<div class="container" id="bio-animate">
 				<div class="row row-padded">
 					<div class="col-md-3">
-						<h2 class="fh5co-section-heading to-animate">Biography<span class="fh5co-border"></span></h2>
+						<h2 class="fh5co-section-heading to-animate">About Us<span class="fh5co-border"></span></h2>
 					</div>
 					<div class="col-md-8 col-md-push-1">
 						<div class="row">
 							<div class="col-md-6 to-animate">
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed doloremque nesciunt nulla rerum. Ut ipsum tempora magni exercitationem officiis maxime in totam cupiditate doloribus repellat dolorem modi aperiam vitae quia sit asperiores saepe labore eligendi quisquam a eaque incidunt.</p>
+								<p>Partyrazzi Photo Booth is a unique one of a kind open-air photo booth that illuminates. The booth’s sophisticated display of color changing lights can be set to match your event’s theme.</p>
 
-								<p>Accusamus in odio nostrum provident assumenda magni asperiores quia dolorem sint nulla incidunt distinctio nesciunt maiores. Ex modi est soluta consequatur. Sequi cumque tempora blanditiis repellat quisquam at a dolorum molestias itaque eaque! Dolor doloremque expedita voluptas blanditiis modi.</p>
+								<p>Book us for your: Weddings, Anniversaries, Birthday Parties, Debutant Balls, Quinceaneras, Sweet 16s, Showers, Reunions, School Activities, Dances, Graduations, Fundraisers, Holiday Parties, Corporate Events, Conventions and many more! </p>
 							</div>
 							<div class="col-md-6 to-animate">
-								<p>Right molestiae similique enim aliquam deleniti necessitatibus commodi ut blanditiis facere dolore in praesentium? Cupiditate tempore impedit nostrum eveniet deserunt natus dolor recusandae pariatur eligendi unde molestiae autem veniam voluptatem porro quaerat. </p>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor pariatur quidem ab eos saepe suscipit ducimus vitae blanditiis vero qui quam ipsa possimus alias dolore culpa placeat nesciunt quas!</p>
+								<p>Unlike the traditional closed photo booths with Partyrazzi it’s all about walking down the red carpet and being seen, so let us give you and your guests the VIP treatment for your special event. </p>
+								<p>Our booth can be placed indoors or outdoors it is equipped with an 18-megapixel DSLR camera and a top of the line dye-sublimation photo printer that produces your unlimited prints within 20 seconds and yes they will be dry to the touch creating the perfect keepsake for your special occasion. </p>
 							</div>
 						</div>
 					</div>
