--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Verge &mdash; A free HTML5 Template by FREEHTML5.CO</title>
+	<title>Partyrazzi Events</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="keywords" content="photobooth, weddings, events, party, parties" />
+	
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -25,7 +24,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="favicon.jpg">
 
 	<!-- Google Webfonts -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500' rel='stylesheet' type='text/css'>
@@ -132,45 +131,45 @@
 					<div class="col-md-8 col-md-push-1">
 						<div class="row">
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/work_1.jpg" class="image-popup">
+								<a href="images/1.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">Project no. 1</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/work_1.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/1.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/work_2.jpg" class="image-popup">
+								<a href="images/2.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">Project no. 2</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/work_2.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/2.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/work_3.jpg" class="image-popup">
+								<a href="images/3.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">Project no. 3</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/work_3.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/3.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/work_4.jpg" class="image-popup">
+								<a href="images/4.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">Project no. 4</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/work_4.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/4.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/work_5.jpg" class="image-popup">
+								<a href="images/5.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">Project no. 5</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/work_5.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/5.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
-								<a href="images/work_6.jpg" class="image-popup">
+								<a href="images/6.jpg" class="image-popup">
 									<div class="fh5co-overlay-text">Project no. 6</div>
 									<div class="fh5co-overlay"></div>
-									<img src="images/work_6.jpg" alt="Free HTML5 Template" class="img-responsive">
+									<img src="images/6.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							
@@ -202,7 +201,7 @@
 			
 			
 
-			<div class="fh5co-section-seperator fh5co-section-seperator-white" id="contact-animate" style="background-image: url(images/hero-4.jpg);" data-stellar-background-ratio="0.5">
+			<div class="fh5co-section-seperator fh5co-section-seperator-white" id="contact-animate" style="background-image: url(images/hero-4.jpg);" data-stellar-background-ratio=".5">
 				<div class="fh5co-overlay"></div>
 				<div class="container">
 					<div class="fh5co-section-content-wrap">
