--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			</div>
 			<!-- END .container -->
 			
-			<div class="fh5co-section-seperator" style="background-image: url(images/hero-2.jpg);" data-stellar-background-ratio="0.5">
+			<div class="fh5co-section-seperator" style="background-image: url(images/hero-4.jpg);" data-stellar-background-ratio="0.5">
 				<div class="fh5co-overlay"></div>
 				<div class="container" id="counter-animate">
 					<div class="fh5co-section-content-wrap">
@@ -132,42 +132,42 @@
 						<div class="row">
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/1.jpg" class="image-popup">
-									<div class="fh5co-overlay-text">Project no. 1</div>
+									<div class="fh5co-overlay-text">PartyR<i class="icon-star"></i>zzi Events</div>
 									<div class="fh5co-overlay"></div>
 									<img src="images/1.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/2.jpg" class="image-popup">
-									<div class="fh5co-overlay-text">Project no. 2</div>
+									<div class="fh5co-overlay-text">PartyR<i class="icon-star"></i>zzi Events</div>
 									<div class="fh5co-overlay"></div>
 									<img src="images/2.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/3.jpg" class="image-popup">
-									<div class="fh5co-overlay-text">Project no. 3</div>
+									<div class="fh5co-overlay-text">PartyR<i class="icon-star"></i>zzi Events</div>
 									<div class="fh5co-overlay"></div>
 									<img src="images/3.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/4.jpg" class="image-popup">
-									<div class="fh5co-overlay-text">Project no. 4</div>
+									<div class="fh5co-overlay-text">PartyR<i class="icon-star"></i>zzi Events</div>
 									<div class="fh5co-overlay"></div>
 									<img src="images/4.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/5.jpg" class="image-popup">
-									<div class="fh5co-overlay-text">Project no. 5</div>
+									<div class="fh5co-overlay-text">PartyR<i class="icon-star"></i>zzi Events</div>
 									<div class="fh5co-overlay"></div>
 									<img src="images/5.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-project to-animate">
 								<a href="images/6.jpg" class="image-popup">
-									<div class="fh5co-overlay-text">Project no. 6</div>
+									<div class="fh5co-overlay-text">PartyR<i class="icon-star"></i>zzi Events</div>
 									<div class="fh5co-overlay"></div>
 									<img src="images/6.jpg" alt="Free HTML5 Template" class="img-responsive">
 								</a>
@@ -264,7 +264,7 @@
 			<div class="container" id="footer-animate">
 				<div class="row row-padded">
 					<div class="col-md-8 col-md-push-4">
-						<p class="to-animate">&copy; 2017 PartyR<i class="icon-star"></i>zzi Events. All Rights Reserved.</p>
+						<p class="to-animate">&copy; 2017 PartyR<i class="icon-star"></i>zzi Events. All Rights Reserved. Website by <b><a href="https://www.jsapdevs.com" class="to-animate">jsapdevs</a></b></p>
 						
 					</div>
 				</div>
