--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 			<div class="container" id="footer-animate">
 				<div class="row row-padded">
 					<div class="col-md-8 col-md-push-4">
-						<p class="to-animate">&copy; 2017 PartyR<i class="icon-star"></i>zzi Events. All Rights Reserved. Website by <b><a href="https://www.jsapdevs.com" class="to-animate">jsapdevs</a></b></p>
+						<p class="to-animate">&copy; 2017 PartyR<i class="icon-star"></i>zzi Events. All Rights Reserved. Website by <b><a href="http://jsapdevs.com" class="to-animate">jsapdevs</a></b></p>
 						
 					</div>
 				</div>
