--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.jpg">
+	<link rel="shortcut icon" href="images/favicon.jpg">
 
 	<!-- Google Webfonts -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500' rel='stylesheet' type='text/css'>
@@ -221,34 +221,37 @@
 										
 									</ul>
 								</div>
-
+								<!-- Begin Contact Form -->
+                				<form action="mailer.php" id="contact_form" method="post" class="wow fadeInUpBig" data-wow-offset="80" data-wow-duration="3s">
+							
 								<div class="col-md-8 col-md-push-1">
 									<div class="row">
 										<div class="col-md-6">
 											<div class="form-group to-animate">
 												<label for="name" class="sr-only">Name</label>
-												<input type="text" id="name" class="form-control" placeholder="Name">
+												<input type="text" id="name" class="form-control" name="name" placeholder="Name">
 											</div>
 											<div class="form-group to-animate">
 												<label for="email" class="sr-only">Email</label>
-												<input type="email" id="email" class="form-control" placeholder="Email">
+												<input type="email" id="email" class="form-control" name="email" placeholder="Email">
 											</div>
 											<div class="form-group to-animate">
 												<label for="phone" class="sr-only">Phone</label>
-												<input type="text" id="phone" class="form-control" placeholder="Phone">
+												<input type="text" id="phone" name="phone" class="form-control" placeholder="Phone">
 											</div>
 										</div>
 										<div class="col-md-6">
 											<div class="form-group to-animate">
 												<label for="message" class="sr-only">Message</label>
-												<textarea name="" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
+												<textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
 											</div>
 											<div class="form-group to-animate">
-												<input type="submit" class="btn btn-primary btn-block" value="Send Message">
+												<input type="submit" name="submitted" id="submitted" class="btn btn-primary btn-block submit" value="Send Message">
 											</div>
 										</div>
 
 									</div>
+								</form>
 								</div>
 
 							</div>
